mise a jour javascript cropped image (loader) + optimization

--- a/admin/index.html
+++ b/admin/index.html
@@ -138,6 +138,9 @@
                 </div>
             </div>
         </div>
+        <!-- compteur -->
+        <script type="text/javascript" src="../js/compteur.js"></script>
+        <!-- pick color addon -->
         <script src="../js/tinycolor-0.9.15.min.js"></script>
         <script src="../js/pick-a-color-1.2.3.min.js"></script>
     </body>
