ajout d'ob_start dans l'index pour eviter le warning php " Warning: Cannot modify header information - headers already sent by ... "

--- a/admin/main/liste_jeux/ajouter_jeux.html
+++ b/admin/main/liste_jeux/ajouter_jeux.html
@@ -6,7 +6,7 @@
         Ajouter un jeu
         <?php }?>
     </h3>
-    <form method="POST" enctype="multipart/form-data">
+    <form method="POST" action="#" enctype="multipart/form-data">
         <div class="row">
             <div class="col-md-7">
                 <div class="form-group">
@@ -83,7 +83,7 @@
                                         <div class="col-md-4">
                                             <div id="type_crop">Portrait (3:4)</div>
                                             <div id="pre_crop" class="preview pre_label" style="overflow: hidden;height: 235px;width: 176px; float: none;border: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;" >
-                                                <img src=""/>
+                                                <!--<img src="" alt="preview"/>-->
                                             </div>
                                             <div id="dim"></div>
                                         </div>
