--- a/admin/index.html
+++ b/admin/index.html
@@ -21,7 +21,7 @@
         <link href="../css/cropper.min.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript" src="../js/cropper.min.js"></script>
 
-        <link rel="stylesheet" href="../css/pick-a-color-1.2.3.min.css">
+        <link rel="stylesheet" href="../css/bootstrap-colorpicker.min.css">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -141,7 +141,6 @@
         <!-- compteur -->
         <script type="text/javascript" src="../js/compteur.js"></script>
         <!-- pick color addon -->
-        <script src="../js/tinycolor-0.9.15.min.js"></script>
-        <script src="../js/pick-a-color-1.2.3.min.js"></script>
+        <script src="../js/bootstrap-colorpicker.min.js"></script>
     </body>
 </html>
