--- a/admin/main/liste_jeux/ajouter_jeux.html
+++ b/admin/main/liste_jeux/ajouter_jeux.html
@@ -82,7 +82,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div id="type_crop">Portrait (3:4)</div>
-                                            <div id="pre_crop" class="preview pre_label" style="overflow: hidden;height: 235px;width: 176px; float: none;border: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;" >
+                                            <div id="pre_crop" class="preview pre_label">
                                                 <!--<img src="" alt="preview"/>-->
                                             </div>
                                             <div id="dim"></div>
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <div id="pre_form" class="preview" style="overflow: hidden;height: 200px;width: 150px; float: noneborder: 3px solid #fff;box-shadow: 0 0 5px rgba(0,0,0,.15);margin-left: auto;margin-right: auto;">
+                <div id="pre_form" class="preview">
                     <img src="../images/jeux/<?= $image_jeu; ?>"/>
                 </div>
             </div>
