--- a/admin/main/liste_jeux/ajouter_jeux.html
+++ b/admin/main/liste_jeux/ajouter_jeux.html
@@ -67,8 +67,8 @@
 
                                 <div class="modal-body">
                                     <div class="row">
-                                        <div class="col-md-8">
-                                            <div class="crop" style="min-height: 300px;max-height: 500px;">
+                                        <div class="col-md-8" style="padding-left: 10px;padding-right: 10px">
+                                            <div class="crop" style="margin:auto;height: 300px;width: 390px;padding: 0">
                                                 <img id="crop" src="" />
                                                 <!--<script>
                                                     $('#myModal').on('shown.bs.modal', function () {
