ajout d'une extension jpeg

--- a/admin/main/liste_jeux/ajouter_jeux.html
+++ b/admin/main/liste_jeux/ajouter_jeux.html
@@ -38,7 +38,7 @@
                     <script>
                         /* Initialize your widget via javascript as follows */
                         $("#inputGameFile").fileinput({
-                            allowedFileExtensions : ['jpg', 'png','gif'],
+                            allowedFileExtensions : ['jpg', 'png','gif','jpeg'],
                             maxFileSize: 500000,
 
                             previewFileType: "image",
