Ajout des tables event et inscription Ajout de la partie inscription/désinscription à un événement Ajout des html pour trier, afficher les pages et pour afficher un nombre de résultat par page.

--- a/accessoires/footer.html
+++ b/accessoires/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer col-md-10 col-lg-offset-1">
     <div class="content_footer">
         <div class="col_footer">
             <ul class="liste_footer">
