--- a/accessoires/menu.html
+++ b/accessoires/menu.html
@@ -55,7 +55,7 @@
                         </li>
                         <?php if(isset($_SESSION['id_user'])){ ?><!-- Si l'utilisateur est connecté afficher -->
                             <li class="dropdown">
-                                <a id="drop_compte" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img alt="av" id="avatarMenu" class="img-circle" height="40" width="40" src="images/avatars/<?php echo $_SESSION['avatars']; ?>"/><p id="compteMenu"><?php echo $_SESSION['pseudo']; ?><br/> <span class="small">(<?php echo recup_rang($_SESSION['droits']) ?>)</span></p><span id="caretCompte" class="caret"></span></a>
+                                <a id="drop_compte" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img alt="av" id="avatarMenu" class="img-circle" height="40" width="40" src="images/avatars/<?php echo $_SESSION['avatars']; ?>"/><p id="compteMenu"><?php echo $_SESSION['pseudo']; ?><br/> <span class="small">(<?php echo recup_rang($droits) ?>)</span></p><span id="caretCompte" class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li>
                                         <a href="deconnexion.php">
