--- a/admin/main/liste_jeux/ajouter_jeux.html
+++ b/admin/main/liste_jeux/ajouter_jeux.html
@@ -92,7 +92,7 @@
                                 <div class="modal-footer">
 
                                     <!--***************** Input couleur de fond de l'image *****************************-->
-                                    <div class="demo2" style="width: 10px;float: left;">
+                                    <div class="contentColor" style="width: 10px;float: left;">
                                         <input type="hidden" value="#ffffff" id="backgroundColor" name="backgroundColor" class="form-control">
                                         <span class="input-group-addon" style="  border: 1px solid #245580;border-radius: 4px;background-image: linear-gradient(to bottom, #337ab7 0%, #265a88 100%);cursor: pointer; height: 35px;  padding-top: 5px;  padding-bottom: 4px;">
                                             <span style="color: #ffffff;font-size: 13px;">Couleur de fond </span>
@@ -101,7 +101,7 @@
                                     </div>
                                     <script>
                                         $(function(){
-                                            $('.demo2').colorpicker();
+                                            $('.contentColor').colorpicker();
                                         });
                                     </script>
                                     <!--****************-->
