--- a/liste_jeu.html
+++ b/liste_jeu.html
@@ -54,7 +54,7 @@
                             { ?>
                                 <article class="media liste_jeu">
                                     <div class="media-mod media-img-left col-md-3 col-sm-3 col-xs-3">
-                                        <img class="img-responsive" src="<?= $image_jeu[$i];?>" alt="..."/>
+                                        <img class="img-responsive" src="../images/jeux/<?= $image_jeu[$i];?>.png" alt="..."/>
                                     </div>
                                     <div class="media-mod col-md-9 col-sm-9 col-xs-9">
                                         <h4 class="media-heading" >
