corrections inclusion js colorpicker

--- a/admin/main/liste_jeux/ajouter_jeux.html
+++ b/admin/main/liste_jeux/ajouter_jeux.html
@@ -220,6 +220,8 @@
         </div>
     </form>
 </div>
+<script src="../js/bootstrap-colorpicker.min.js"></script>
 <!--read url pour l'image-->
 <script type="text/javascript" src="../js/readURL.js"></script>
+<!-- pick color addon -->
 
